<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    tools:context=".insights.Fragment2">

    <TextView
        android:id="@+id/sala1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textColor="@color/dataner_black"
        android:textSize="15sp"
        android:text="@string/txtSala1"
        android:gravity="center_vertical"
        android:layout_marginStart="60dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sala2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/txtSala2"
        android:textColor="@color/dataner_black"
        android:textSize="15sp"
        android:gravity="center_vertical"
        android:layout_marginStart="60dp"
        app:layout_constraintTop_toBottomOf="@+id/sala1" />

    <TextView
        android:id="@+id/sala3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/txtSala03"
        android:textColor="@color/dataner_black"
        android:textSize="15sp"
        android:gravity="center_vertical"
        android:layout_marginStart="60dp"
        app:layout_constraintTop_toBottomOf="@+id/sala2" />

    <TextView
        android:id="@+id/sala4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/txtSala04"
        android:textColor="@color/dataner_black"
        android:textSize="15sp"
        android:gravity="center_vertical"
        android:layout_marginStart="60dp"
        app:layout_constraintTop_toBottomOf="@+id/sala3" />

    <TextView
        android:id="@+id/sala5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/txtSala05"
        android:textColor="@color/dataner_black"
        android:textSize="15sp"
        android:gravity="center_vertical"
        android:layout_marginStart="60dp"
        app:layout_constraintTop_toBottomOf="@+id/sala4" />

</androidx.constraintlayout.widget.ConstraintLayout>