<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="buildingCreateViewModel"
            type="com.example.datanermobile.building.create.BuildingCreateViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dataner_gray"
        tools:context=".building.update.BuildingUpdateFragment">

        <TextView
            android:id="@+id/tv_new_building_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/tv_new_building_label"
            android:textColor="@color/dataner_black"
            android:textSize="@dimen/building_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/sv_building_create"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/bt_building_create"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_new_building_label">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_building_name"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:layout_marginBottom="16dp"
                    android:hint="@string/building_name"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/et_building_zip_code"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:hint="@string/building_zip_code"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/et_building_country"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:hint="@string/building_country"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/et_building_state"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:hint="@string/building_state"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/et_building_city"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:hint="@string/building_city"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/et_building_address_type"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:hint="@string/building_address_type"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/et_building_address"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:hint="@string/building_address"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/et_building_address_number"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:hint="@string/building_address_number"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/et_building_company"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:hint="@string/building_company"
                    android:inputType="number" />
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/bt_building_cancel"
            style="@style/BuildingButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/translucent_round_conner_button"
            android:onClick="@{() -> buildingCreateViewModel.onClose()}"
            android:text="@string/building_cancel"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sv_building_create"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/bt_building_create"
            style="@style/BuildingButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/building_create"
            android:background="@drawable/custom_button"
            android:textAllCaps="false"
            app:layout_constraintBaseline_toBaselineOf="@+id/bt_building_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.963"
            app:layout_constraintStart_toEndOf="@+id/bt_building_cancel"
            android:background="@drawable/custom_button"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>