<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="deviceCreateViewModel"
            type="com.example.datanermobile.device.create.DeviceCreateViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dataner_gray"
        tools:context=".device.create.DeviceCreateFragment">

        <TextView
            android:id="@+id/tv_new_device_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/tv_new_device_label"
            android:textColor="@color/dataner_black"
            android:textSize="@dimen/building_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/sv_device_create"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/bt_device_create"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_new_device_label">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_device_id"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:layout_marginBottom="16dp"
                    android:hint="@string/device_id"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/et_device_description"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:hint="@string/device_description"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/et_device_type"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:hint="@string/device_type"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/et_workplace_id"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:hint="@string/device_workplace"
                    android:inputType="number" />
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/bt_device_cancel"
            style="@style/BuildingButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:background="@color/dataner_gray"
            android:onClick="@{() -> deviceCreateViewModel.onClose()}"
            android:text="@string/building_cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sv_device_create"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/bt_device_create"
            style="@style/BuildingButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_create"
            app:layout_constraintBaseline_toBaselineOf="@+id/bt_device_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.963"
            app:layout_constraintStart_toEndOf="@+id/bt_device_cancel" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>